apps/rbnis/components/ingress-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbnis
  namespace: rbnis
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: rbn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rbnis
                port:
                  number: 80
  tls:
    - hosts:
        - rbn.is
      secretName: cert-rbnis
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbnis-wildcard
  namespace: rbnis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: https://rbn.is/$1$2
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "*.rbn.is"
      http:
        paths:
          - path: /([^/]*)(.*)
            pathType: Prefix
            backend:
              service:
                name: rbnis
                port:
                  number: 80
  tls:
    - hosts:
        - "*.rbn.is"
      secretName: cert-rbnis
